---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/type_param_default_py313.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..112,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 44..65,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 49..50,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 50..59,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 51..58,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 51..52,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 55..58,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 62..65,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 66..87,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 70..71,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 71..80,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 72..79,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 72..73,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 76..79,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 80..82,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 84..87,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 84..87,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 88..111,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 94..95,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 95..104,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 96..103,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 96..97,
                                            node_index: NodeIndex(None),
                                            parameter_node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 100..103,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 104..106,
                            node_index: NodeIndex(None),
                            args: [],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 108..111,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 108..111,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
